<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="12sp"
        android:layout_marginLeft="12sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instrucciones_conf_participantes"
        android:id="@+id/textView" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="12sp"
        android:layout_marginLeft="12sp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/part_act_1"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/part_act_2"
            android:id="@+id/radioButton" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginRight="12sp"
        android:layout_marginEnd="12sp"
        android:layout_gravity="end"
        android:text="@string/aceptar"/>

</LinearLayout>