<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/mensaje_seleccion_perfiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20sp"
        android:textSize="20sp"
        android:text="@string/mensaje_seleccion_perfiles"/>
    <Button
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:layout_below="@id/mensaje_seleccion_perfiles"
        android:text="@string/aceptar"/>
    <RelativeLayout
        android:id="@+id/barra_perfiles"
        android:layout_below="@+id/aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:id="@+id/set_title_option_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="20sp"
                android:layout_toLeftOf="@+id/substract"
                android:layout_toStartOf="@+id/substract"
                android:text="@string/escriba_perfil"
                android:textColor="#904444"
                android:textSize="16sp" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16sp"
                android:layout_toLeftOf="@+id/substract"
                android:layout_toStartOf="@+id/substract"
                android:onClick="add"
                android:text="@string/agregar" />

            <Button
                android:id="@+id/substract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="20sp"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="20sp"
                android:layout_marginStart="8sp"
                android:layout_marginTop="16sp"
                android:enabled="false"
                android:onClick="substract"
                android:text="@string/quitar"/>

            <ListView
                android:id="@+id/option_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/substract"
                android:layout_marginBottom="12sp" />
        </RelativeLayout>
</RelativeLayout>