<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp" >

        <TextView
            android:id="@+id/greeting_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/greeting_tag"
            android:textSize="45sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/first_time_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header_container"
        android:layout_margin="8sp"
        android:text="@string/primera_apertura"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mensaje_de_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_time_tag"
        android:layout_marginEnd="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp" />

    <EditText
        android:id="@+id/psswd1"
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:layout_below="@+id/mensaje_de_error"
        android:layout_marginEnd="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        android:background="@drawable/input_box_1"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/confirmar_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/psswd1"
        android:layout_marginEnd="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        android:text="@string/confirmar_contraseña"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/psswd2"
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:layout_below="@+id/confirmar_contraseña"
        android:layout_marginEnd="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        android:background="@drawable/input_box_1"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12sp"
        android:layout_marginEnd="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginTop="12sp"
        android:contentDescription="@string/Votaciones"
        android:onClick="next"
        android:text="@string/next"
        android:textSize="18sp" />

</RelativeLayout>