<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/input_usr_label"
            style="@style/margen_lr_20"
            android:layout_alignParentTop="true"
            android:text="@string/_first_time_header"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/input_psswd_label"
            style="@style/margen_lr_20"
            android:layout_below="@+id/input_usr_label"
            android:layout_marginTop="20sp"
            android:text="@string/_first_time_label" />

        <EditText
            android:id="@+id/input_psswd"
            style="@style/margen_lr_20"
            android:layout_below="@+id/input_psswd_label"
            android:layout_marginTop="12sp"
            android:inputType="text" />

        <Button
            android:id="@+id/logIn"
            android:layout_width="180sp"
            android:layout_height="35sp"
            android:layout_below="@+id/input_psswd"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="12sp"
            android:background="@drawable/custom_btn_normal"
            android:gravity="center"
            android:text="@string/load_password"
            android:textColor="@color/splash_header_text" />
    </RelativeLayout>

</ScrollView>