<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TextView
                android:id="@+id/Credenciales"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="12sp"
                android:layout_marginLeft="12sp"
                android:layout_marginRight="12sp"
                android:layout_marginStart="12sp"
                android:layout_marginTop="28sp"
                android:onClick="credenciales"
                android:text="@string/Credenciales"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Votaciones"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Credenciales"
                android:layout_marginEnd="12sp"
                android:layout_marginLeft="12sp"
                android:layout_marginRight="12sp"
                android:layout_marginStart="12sp"
                android:layout_marginTop="28sp"
                android:onClick="votaciones"
                android:text="@string/Votaciones"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Perfiles"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Votaciones"
                android:layout_marginEnd="12sp"
                android:layout_marginLeft="12sp"
                android:layout_marginRight="12sp"
                android:layout_marginStart="12sp"
                android:layout_marginTop="28sp"
                android:onClick="perfiles"
                android:text="@string/Perfiles"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Zonas"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Perfiles"
                android:layout_marginEnd="12sp"
                android:layout_marginLeft="12sp"
                android:layout_marginRight="12sp"
                android:layout_marginStart="12sp"
                android:layout_marginTop="28sp"
                android:onClick="zonas"
                android:text="@string/Zonas"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>